<resources>
    <string name="app_name" translatable="false">Nirmano</string>
    <string name="by_signing_up__you_agree_to_nirmano_s_terms___conditions_and_privacy_policy_string" translatable="false">By signing up, you agree to Nirmanos <b>Terms &amp; Conditions and Privacy Policy</b></string>
    <string name="nirmano_string" translatable="false">NIRMANO</string>
    <string name="mobile_number_string" translatable="false">Mobile Number</string>
    <string name="username_string">Username</string>
    <string name="get_started_in_few_simple_steps_string">Get started in few simple steps</string>
    <string name="send_otp_string">Send OTP</string>
    <string name="default_notification_channel_id">PushNotifications</string>
    <string name="about">I am a mental health professional with clinical training, and I have a strong passion for research, mentoring, and strength-based approaches to mental health. My quick learning curve, dedication to my clients, and nonjudgmental outlook, in my opinion, will all contribute to my ability to forge effective therapeutic relationships. I am a good listener and I think that compassion and respect are crucial in therapy. Regaining your focus and feeling like your best self is my aim for you! My ability to create a treatment plan that is unique for each client is my main strength.</string>
    <string name="_00_00_string">00:00</string>
    <string name="otp_verification_string">OTP VERIFICATION</string>
    <string name="enter_the_otp_sent_to_000_999_4444_string">Enter the OTP sent to Your Mobile Number</string>
    <string name="I_agree_to_all_terms_conditions">I agree to all <b>terms &amp; conditions</b></string>
    <string name="already_have_an_account">Already having an account? <b>Login</b></string>
    <string name="dont_have_an_account">Don\'t Have An Account? <b>Signup</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_with_bullet">
        &#160;\u2022  Lack of energy \n
        \u2022  Difficulty concentrating \n
        \u2022  Not wanting to see people \n
        \u2022  Feeling sad, low, tearful, guilty or hopeless \n
        \u2022  Feeling anxious, angry and agitated
    </string>
    <string name="angrysecbody"> &#160;\u2022  A churning feeling in your stomach \n
        \u2022  Tightness in your chest. \n
        \u2022  An increased and rapid heartbeat. \n
        \u2022  Legs go weak \n
        \u2022  Tense muscles \n
        \u2022   You feel hot
    </string>
    <string name="fearsecbody"> &#160;\u2022  Sweating \n
        \u2022  Trembling \n
        \u2022  An increased and rapid heartbeat. \n
        \u2022  Difficulty breathing  \n
        \u2022  Rapid heartbeat \n
    </string>
    <string name="angryfirstbody">When your behavior is not helpful and you frequently experience aggressive thoughts or physical arousal. That does mean you are experiencing anger.</string>
    <string name="fearfirstbody">Fear is an extremely unpleasant feeling that occurs when a threat or danger is perceived</string>
    <string name="upset">
        &#160;\u2022  Sadness \n
        \u2022  Tearfulness \n
        \u2022  A sense of emptiness \n
        \u2022  Angry outbursts \n
        \u2022  Hopelessness \n
        \u2022  Frustration \n
        \u2022  Irritability \n
    </string>
    <string name="suffering"> &#160;\u2022  Personality change in a way that seems different for that person  \n
        \u2022  Agitation or displaying anger, anxiety or moodiness  \n
        \u2022  Withdrawal or isolation from others Poor self-care and perhaps engaging in risky behavior \n
        \u2022  Hopelessness, or feelings of being overwhelmed and worthless \n
    </string>
    <string name="disappointed"> &#160;\u2022 Greater frequency of headaches  \n
        \u2022  Gastrointestinal difficulties  \n
        \u2022  Moist palms and over-perspiration \n
    </string>
    <string name="shameful"> &#160;\u2022 Wanting to Disappear  \n
        \u2022  Self-Blame, Addiction, Anger, disgust embarrassment  \n
        \u2022  Humiliation \n
        \u2022  Regret \n
        \u2022  Remorse  \n
        \u2022  Self-consciousness \n
    </string>
    <string name="negleted"> &#160;\u2022 Difficulties with emotions  \n
        \u2022  Difficulty with Self Compassion  \n
        \u2022  Feeling Numb or “Empty” \n
        \u2022  Difficulty trusting + relying on others \n
        \u2022  Unrealistic View of Self \n
        \u2022  Overreacting to conflict \n
        \u2022  Chronic Self-blame \n
        \u2022  Self-Doubt \n
        \u2022  Unhealthy relationships \n
        \u2022  Easily Triggered \n
    </string>
    <string name="dispair"> &#160;\u2022 There is no joy in life  \n
        \u2022  No passion  \n
        \u2022  Instead, desperation, anxiety, and hopelessness fill their day \n
    </string>
    <string name="rage"> &#160;\u2022 Yelling or shouting.  \n
        \u2022  Intense anger  \n
        \u2022  Physical aggression \n
    </string>
    <string name="envy"> &#160;\u2022 You aren\'t happy for others when they achieve success  \n
        \u2022  Another person\'s success makes you feel unhappy  \n
        \u2022  You feel the need to diminish someone else\'s success \n
        \u2022  You judge others negatively \n
        \u2022  You\'re happy when others face setbacks. \n
    </string>
    <string name="disgust"> &#160;\u2022 Revulsion in the mouth, throat, and/or stomach \n
        \u2022 Nausea, or physical repulsion  \n
    </string>
    <string name="irritable"> &#160;\u2022 Restlessness  \n
        \u2022  Difficulty concentrating  \n
        \u2022  Moodiness — feeling annoyed and grump \n
        \u2022  Aggression \n
        \u2022  Agitation \n
        \u2022  Frustration \n
    </string>
    <string name="exaserated"> &#160;\u2022 Crossed Arms  \n
        \u2022  Looking Anywhere But Directly At You (Especially To The Side)  \n
        \u2022  They Huff or Sigh A Lot \n
        \u2022  Short Terse Replies \n
        \u2022  Interrupting While You Speak \n
        \u2022  Turning Their Body Away From You. \n
    </string>
    <string name="Horror"> &#160;\u2022 Trembling   \n
        \u2022  Difficulty breathing   \n
        \u2022  Rapid heartbeat  \n
        \u2022  Not going to the washroom at night  \n
        \u2022  Avoiding being alone  \n
        \u2022  Difficulty sleeping alone \n
    </string>
    <string name="Nervous"> &#160;\u2022  Rapid heartbeat    \n
        \u2022  Trembling  \n
        \u2022  Feeling weak or tired \n
        \u2022  Feeling nervous, restless or tensed \n
    </string>
    <string name="insecure">&#160;\u2022  Low self-esteem, self-confidence, and self-worth.  \n
       \u2022 An intense feeling of incompleteness. Generally uncertain about the world.  \n
    </string>
    <string name="terror"> &#160;\u2022 A \"racing\" heart   \n
        \u2022  Feeling weak, faint, or dizzy  \n
        \u2022  Shaking \n
        \u2022  Tingling or numbness in the hands and fingers  \n
        \u2022  Feeling sweaty or having chills \n
        \u2022  Nausea \n
    </string>
    <string name="scared"> &#160;\u2022 Sweating  \n
        \u2022  Trembling.  \n
        \u2022  Rapid heartbeat \n
        \u2022  Feeling unsteady \n
    </string>
    <string name="sorrow"> &#160;\u2022 Sadness \n
        \u2022  Tearfulness  \n
        \u2022  Angry outbursts  \n
        \u2022  Hopelessness \n
        \u2022  Frustration  \n
        \u2022  Irritability \n
    </string>
    <string name="depressed"> &#160;\u2022 Loss of interest or pleasure in things you once enjoyed \n
        \u2022  Feelings of guilt  \n
        \u2022  Hopelessness, or worthlessness,   \n
        \u2022  Decreased energy, fatigue, or feeling slowed down \n
        \u2022  Difficulty concentrating, remembering, or making decisions  \n
        \u2022  Trouble sleeping \n
        \u2022  Changes to appetite or weight. Restlessness or irritability, \n
    </string>
    <string name="agony"> &#160;\u2022 Tense body language and restlessness \n
        \u2022  Strained facial expressions  \n
        \u2022  Sad facial expressions OR Tearfulness   \n
        \u2022  Increased resistance/agitation with movement \n
        \u2022  Increased breathing OR Shortness of breath  \n
    </string>
    <string name="hurt"> &#160;\u2022 Loss of interest or pleasure in things you once enjoyed \n
        \u2022  Feelings of guilt, hopelessness, or worthlessness \n
        \u2022  Decreased energy, fatigue and feeling low   \n
        \u2022  Fatigue \n
        \u2022  Feeling guilty, helpless, or hopeless  \n
        \u2022  Avoiding family and friends  \n
    </string>
    <string name="restful"> &#160;\u2022 Loss of interest or pleasure in things you once enjoyed \n
        \u2022  Feelings of guilt, hopelessness, or worthlessness  \n
        \u2022  Decreased energy, fatigue and feeling low   \n
        \u2022  Difficulty concentrating, remembering \n
        \u2022  Changes to weight and trouble sleeping  \n
    </string>
    <string name="DISPLEASED"> &#160;\u2022 Always complaining \n
        \u2022  You get angry at petty things  \n
        \u2022  Often feel lonely   \n
        \u2022  Hopelessness \n
        \u2022  Fear grasps your mind  \n
        \u2022  Decline in health  \n
        \u2022  You are absent-minded  \n
    </string>
    <string name="DISMAYED">&#160;\u2022  You\'re aghast  \n
        \u2022 Shocked by disappointment \n
    </string>
    <string name="GUILTY"> &#160;\u2022 Being sensitive to the effects of every action \n
        \u2022  Overwhelmed by possibly making the “wrong” decision  \n
        \u2022  Low self-esteem  \n
        \u2022  Putting others before yourself until its detrimental \n
        \u2022  Avoiding your full range of emotions \n
    </string>
    <string name="Regretful"> &#160;\u2022 You might feel frustrated \n
        \u2022  Disappointed with yourself  \n
        \u2022  Embarrassed or even sad \n
    </string>
    <string name="Lonly"> &#160;\u2022 Inability to connect with others on a deeper, more intimate level \n
        \u2022  No close or \"best\" friends  \n
        \u2022  An overwhelming feeling of isolation regardless of where you are and who around  \n
        \u2022  Negative feelings of self-doubt and self-worth \n
    </string>
    <string name="Isolated"> &#160;\u2022 Deep boredom \n
        \u2022  General lack of interest and withdrawal  \n
        \u2022  Losing interest in personal hygiene   \n
        \u2022  Poor eating and nutrition  \n
        \u2022  Significant disrepair, clutter and hoarding in the house  \n
    </string>
    <string name="Dread"> &#160;\u2022 Fear of loss and abandonment \n
        \u2022  Self-doubt  \n
        \u2022  Meaningless or hopeless thoughts   \n
        \u2022  Powerless, helpless and feeling trapped  \n
    </string>
    <string name="humiliated"> &#160;\u2022 Extremely offended  \n
        \u2022  Ashamed  \n
        \u2022  Embarrassed  \n
    </string>
    <string name="anxious"> &#160;\u2022 Feeling nervous, restless or tense  \n
        \u2022  Breathing rapidly (hyperventilation)  \n
        \u2022  Sweating.  \n
        \u2022  Trembling  \n
        \u2022  Feeling weak or tired  \n
        \u2022  Trouble concentrating or thinking about  anything other than the present worry  \n
    </string>
    <string name="worried"> &#160;\u2022 Having a sense of impending danger, panic, or doom \n
        \u2022  Headache  \n
        \u2022  Having difficulty concentrating   \n
        \u2022  Difficulty falling or staying asleep  \n
    </string>
    <string name="INCOMPLETE"> &#160;\u2022 Low self-worth \n
        \u2022  Perception of failure  \n
        \u2022  Fear of rejection  \n
        \u2022  The inability to accept praise  \n
        \u2022  Feelings of powerlessness  \n
    </string>
</resources>