<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/page_root_view"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <ProgressBar
            android:id="@+id/progressBar2"
            android:elevation="2dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:targetApi="lollipop"/>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/_bg___4__register_shape"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/login_page_top_star"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="star_1_for_login"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_1_for_register"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/nirmano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nirmano_string"
                        android:textColor="@color/register_color"
                        android:textSize="32sp"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/get_started_in_few_simple_steps"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/get_started_in_few_simple_steps_string"
                        android:textColor="@color/register_color"
                        android:fontFamily="@font/poppins"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="LOG IN"
                        android:textColor="@color/register_color"
                        android:textSize="28sp"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mobile_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/mobile_number_string"
                        android:textColor="@color/mobile_number_color"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/phone_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rectangle_174_shape"
                        android:inputType="phone"
                        android:fontFamily="@font/poppins"
                        android:padding="10dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/send_otp_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="176dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#FF9C27"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    android:text="@string/send_otp_string"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold" />

                <TextView android:id="@+id/phone_register_instead"
                          android:layout_width="match_parent"
                          android:layout_height="25dp"
                          android:layout_marginTop="40dp"
                          android:text="@string/dont_have_an_account"
                          android:textAlignment="center"
                          android:fontFamily="@font/poppins"
                          android:textColor="@color/already_having_an_account__log_in_color"
                          android:autoSizeTextType="uniform"
                          android:autoSizeMinTextSize="1sp"
                          android:lines="1"/>



                <TextView
                    android:id="@+id/by_signing_up__you_agree_to_nirmano_s_terms___conditions_and_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:fontFamily="@font/poppins"
                    android:text="@string/by_signing_up__you_agree_to_nirmano_s_terms___conditions_and_privacy_policy_string"
                    android:textColor="@color/by_signing_up__you_agree_to_nirmano_s_terms___conditions_and_privacy_policy_color" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>